# rust-python-cross-example

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md
spid_test/: __init__.py
src/: lib.rs
