[package]
name = "libspidtest"
version = "0.1.0"
authors = ["D.S. Ljungmark <spider@skuggor.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.13.2", features = ["extension-module"] }


[lib]
name = "lib_spid_test"
crate-type=["cdylib", "rlib"]
